--- a/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
@@ -13,7 +13,8 @@
           'is-invalid': this.addAttributeDictionaryForm.controls._id.status !== 'VALID',
           'is-valid': this.addAttributeDictionaryForm.controls._id.status === 'VALID',
           'form-control': true,
-        }" />
+        }"
+      />
       <div *ngIf="this.addAttributeDictionaryForm.controls._id.errors" class="invalid-feedback">
         <div *ngIf="this.addAttributeDictionaryForm.controls._id.errors.required">Id is required</div>
         <div *ngIf="this.addAttributeDictionaryForm.controls._id.errors.minlength">
@@ -53,8 +54,9 @@
               'is-valid': this.addAttributeDictionaryForm.controls.type.status === 'VALID',
               'form-select': true,
             }"
-            id="type">
-            <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
+            id="type"
+          >
+            <option *ngFor="let typeObj of deviceTypeDict['list']; let i = index">
               {{ typeObj.name }}
             </option>
           </select>
@@ -77,7 +79,8 @@
               'is-invalid': this.addAttributeDictionaryForm.controls.category.status !== 'VALID',
               'is-valid': this.addAttributeDictionaryForm.controls.category.status === 'VALID',
               'form-select': true,
-            }">
+            }"
+          >
             <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
               {{ categoryObj.name }}
             </option>
@@ -98,7 +101,8 @@
               'is-valid': this.addAttributeDictionaryForm.controls.component.status === 'VALID',
               'form-select': true,
             }"
-            id="component">
+            id="component"
+          >
             <option *ngFor="let componentObj of componentDictionary.list; let i = index">
               {{ componentObj.name }}
             </option>
@@ -113,12 +117,14 @@
       <button
         type="submit"
         [disabled]="!(this.addAttributeDictionaryForm.valid && this.addAttributeDictionaryForm.touched)"
-        class="btn btn-primary">
+        class="btn btn-primary"
+      >
         Add model
       </button>
       <div
         *ngIf="!(this.addAttributeDictionaryForm.valid && this.addAttributeDictionaryForm.touched)"
-        class="invalid-feedback">
+        class="invalid-feedback"
+      >
         Form is invalid
       </div>
     </div>
