--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -15,7 +15,8 @@
               'is-invalid': this.form.controls.id.status !== 'VALID',
               'is-valid': this.form.controls.id.status === 'VALID',
               'form-control': true,
-            }" />
+            }"
+          />
           <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
             <div *ngIf="this.form.controls.id.errors.minlength">Id must be at least 4 characters</div>
@@ -55,8 +56,9 @@
               'is-valid': this.form.controls.type.status === 'VALID',
               'form-select': true,
             }"
-            id="type">
-            <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
+            id="type"
+          >
+            <option *ngFor="let typeObj of deviceTypeDict['list']; let i = index">
               {{ typeObj.name }}
             </option>
           </select>
@@ -76,7 +78,8 @@
               'is-valid': this.form.controls.category.status === 'VALID',
               'form-select': true,
             }"
-            id="category">
+            id="category"
+          >
             <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
               {{ categoryObj.name }}
             </option>
@@ -100,7 +103,8 @@
             id="component"
             ngbPopover="Select where you want use this attribute"
             triggers="mouseenter:mouseleave"
-            popoverTitle="Range of use by components">
+            popoverTitle="Range of use by components"
+          >
             <option *ngFor="let componentObj of componentDictionary.list; let i = index">
               {{ componentObj.name }}
             </option>
