--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -16,7 +16,8 @@
             'is-invalid': this.editDeviceForm.controls._id.status !== 'VALID',
             'is-valid': this.editDeviceForm.controls._id.status === 'VALID',
             'form-control': true,
-          }" />
+          }"
+        />
         <div *ngIf="this.editDeviceForm.controls._id.errors" class="invalid-feedback">
           <div *ngIf="this.editDeviceForm.controls._id.errors.required">Id is required</div>
           <div *ngIf="this.editDeviceForm.controls._id.errors.minlength">Id must be at least 4 characters</div>
@@ -39,7 +40,8 @@
               'is-invalid': this.editDeviceForm.controls.name.status !== 'VALID',
               'is-valid': this.editDeviceForm.controls.name.status === 'VALID',
               'form-control': true,
-            }" />
+            }"
+          />
           <div *ngIf="this.editDeviceForm.controls.name.errors" class="invalid-feedback">
             <div *ngIf="this.editDeviceForm.controls.name.errors.required">Name is required</div>
             <div *ngIf="this.editDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
@@ -62,7 +64,8 @@
               'is-invalid': this.editDeviceForm.controls.position.controls.x.status !== 'VALID',
               'is-valid': this.editDeviceForm.controls.position.controls.x.status === 'VALID',
               'form-control': true,
-            }" />
+            }"
+          />
         </div>
         <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors" class="invalid-feedback">
           <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors.required">Name is required</div>
@@ -81,7 +84,8 @@
               'is-invalid': this.editDeviceForm.controls.position.controls.y.status !== 'VALID',
               'is-valid': this.editDeviceForm.controls.position.controls.y.status === 'VALID',
               'form-control': true,
-            }" />
+            }"
+          />
         </div>
         <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors" class="invalid-feedback">
           <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors.required">Name is required</div>
@@ -100,7 +104,8 @@
               'is-invalid': this.editDeviceForm.controls.position.controls.h.status !== 'VALID',
               'is-valid': this.editDeviceForm.controls.position.controls.h.status === 'VALID',
               'form-control': true,
-            }" />
+            }"
+          />
         </div>
         <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')" class="invalid-feedback">
           <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')">Name is required</div>
@@ -112,7 +117,6 @@
         <div class="form-group mb-3">
           <label for="modelId" class="form-label">Model</label>
           <select
-            (change)="changeModelId($event)"
             formControlName="modelId"
             class="form-control"
             id="modelId"
@@ -121,7 +125,8 @@
               'is-invalid': this.editDeviceForm.controls.modelId.status !== 'VALID',
               'is-valid': this.editDeviceForm.controls.modelId.status === 'VALID',
               'form-select': true,
-            }">
+            }"
+          >
             <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj._id }}">
               {{ modelObj.name }} ({{ modelObj.type }}/{{ modelObj.category }})
             </option>
@@ -141,7 +146,8 @@
           'is-invalid': !(editDeviceForm.valid && editDeviceForm.touched),
           'is-valid': editDeviceForm.valid && editDeviceForm.touched,
           'form-control': true,
-        }">
+        }"
+      >
         <i class="bi bi-floppy"></i> Update
       </button>
 
@@ -160,6 +166,7 @@
 
 <app-attribute-list
   [attributeComponent]="attributeComponent"
-  [attributeComponentObject]="attributeComponentObject"></app-attribute-list>
+  [attributeComponentObject]="attributeComponentObject"
+></app-attribute-list>
 
 <app-log [component]="component"></app-log>
