Refactor texture field keys, fix typos, update version, and adjust model ID handling. Adjusted texture field keys, corrected typos in texture object keys, updated the version from "0.26.0" to "0.26.5" in the package.json file, and adjusted model ID handling in various components. These changes ensure data consistency and alignment with the expected data structure. (#123)
Refactor texture keys, update version, fix typos, and enhance model ID handling

Adjust texture field keys, correct typos, upgrade version to "0.26.5" in package.json, and refine model ID handling across components to maintain data integrity and structure alignment. (#123)

--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -127,7 +127,7 @@
               'form-select': true,
             }"
           >
-            <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj._id }}">
+            <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj.id }}">
               {{ modelObj.name }} ({{ modelObj.type }}/{{ modelObj.category }})
             </option>
           </select>
