--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -13,35 +13,37 @@
       <tr
         *ngFor="
           let model of ModelsList
+            | keyvalue
             | paginate
               : {
                   id: 'modelListPagination',
-                  itemsPerPage: 5,
+                  itemsPerPage: 10,
                   currentPage: modelListPage,
                 }
-        ">
+        "
+      >
         <td>
-          {{ model.name }}
-          <p class="fs-7 fw-lighter deviceid">{{ model._id }}</p>
+          {{ model.value.name }}
+          <p class="fs-7 fw-lighter deviceid">{{ model.value.id }}</p>
         </td>
         <td>
-          ({{ model.dimension }}
-          {{ model.dimension.width + ', ' + model.dimension.height + ', ' + model.dimension.depth }})
+          ({{ model.value.dimension }}
+          {{ model.value.dimension.width + ', ' + model.value.dimension.height + ', ' + model.value.dimension.depth }})
         </td>
         <td style="font-size: small">
           <a href="{{ model.texture.front }}">front</a>, <a href="{{ model.texture.back }}">back</a>,
           <a href="{{ model.texture.side }}">side</a>, <a href="{{ model.texture.top }}">top</a>,
-          <a href="{{ model.texture.bottom }}">botom</a>
+          <a href="{{ model.texture.bottom }}">bottom</a>
         </td>
         <td>
           <div class="btn-group" role="group" aria-label="model-operations">
             <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="EditModel(model)">
               <i class="bi bi-pen"></i>
             </button>
-            <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteModel(model._id)">
+            <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteModel(model.id)">
               <i class="bi bi-trash"></i>
             </button>
-            <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model._id)">
+            <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model.id)">
               <i class="bi bi-copy"></i>
             </button>
           </div>
@@ -56,7 +58,8 @@
       data-bs-toggle="button"
       autocomplete="off"
       aria-pressed="true"
-      (click)="AddModel()">
+      (click)="AddModel()"
+    >
       <i class="bi bi-plus-lg"></i> Add
     </button>
   </div>
