--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -20,7 +20,8 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
                 }"
-                id="deviceId">
+                id="deviceId"
+              >
                 <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj._id }}">
                   {{ deviceObj.name }}
                 </option>
@@ -44,8 +45,9 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
                 }"
-                id="modelId">
-                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj._id }}">
+                id="modelId"
+              >
+                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj.id }}">
                   {{ modelObj.name }}
                 </option>
               </select>
@@ -68,10 +70,12 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
                 }"
-                id="connectionId">
+                id="connectionId"
+              >
                 <option
                   *ngFor="let connectionObj of connectionDictionary; let i = index"
-                  value="{{ connectionObj._id }}">
+                  value="{{ connectionObj._id }}"
+                >
                   {{ connectionObj.name }}
                 </option>
               </select>
@@ -97,10 +101,12 @@
               'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status === 'VALID',
               'form-select': true,
             }"
-            id="attributeDictionaryId">
+            id="attributeDictionaryId"
+          >
             <option
               *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
-              value="{{ attributeDictionaryObj._id }}">
+              value="{{ attributeDictionaryObj._id }}"
+            >
               {{ attributeDictionaryObj.name }}
             </option>
           </select>
@@ -128,7 +134,8 @@
               'is-invalid': this.addAttributeFrom.controls.value.status !== 'VALID',
               'is-valid': this.addAttributeFrom.controls.value.status === 'VALID',
               'form-control': true,
-            }" />
+            }"
+          />
           <div class="invalid-feedback">Please select a valid state.</div>
           <div *ngIf="this.addAttributeFrom.controls.value.errors" class="invalid-feedback">
             <div *ngIf="this.addAttributeFrom.controls.value.errors.required">Value is required</div>
@@ -145,7 +152,8 @@
           <button
             type="submit"
             [disabled]="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)"
-            class="btn btn-primary">
+            class="btn btn-primary"
+          >
             Add attribute
           </button>
 
