--- a/src/app/components/devices/add-device/add-device.component.html
+++ b/src/app/components/devices/add-device/add-device.component.html
@@ -15,7 +15,8 @@
           'is-invalid': addDeviceForm.controls.name.status !== 'VALID',
           'is-valid': addDeviceForm.controls.name.status === 'VALID',
           'form-control': true,
-        }"></textarea>
+        }"
+      ></textarea>
       <div *ngIf="addDeviceForm.controls.name.errors" class="invalid-feedback">
         <div *ngIf="addDeviceForm.controls.name.errors.required">Name is required</div>
         <div *ngIf="addDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
@@ -35,7 +36,8 @@
                 'is-invalid': addDeviceForm.controls.position.controls.x.status !== 'VALID',
                 'is-valid': addDeviceForm.controls.position.controls.x.status === 'VALID',
                 'form-control': true,
-              }" />
+              }"
+            />
             <div *ngIf="addDeviceForm.controls.position.controls.x.errors" class="invalid-feedback">
               <div *ngIf="addDeviceForm.controls.position.controls.x.errors.required">X is required</div>
               <div *ngIf="addDeviceForm.controls.position.controls.x.errors.minlength">
@@ -56,7 +58,8 @@
                 'is-invalid': addDeviceForm.controls.position.controls.y.status !== 'VALID',
                 'is-valid': addDeviceForm.controls.position.controls.y.status === 'VALID',
                 'form-control': true,
-              }" />
+              }"
+            />
             <div *ngIf="addDeviceForm.controls.position.controls.y.errors" class="invalid-feedback">
               <div *ngIf="addDeviceForm.controls.position.controls.y.errors.required">Y is required</div>
               <div *ngIf="addDeviceForm.controls.position.controls.y.errors.minlength">
@@ -77,7 +80,8 @@
                 'is-invalid': addDeviceForm.controls.position.controls.h.status !== 'VALID',
                 'is-valid': addDeviceForm.controls.position.controls.h.status === 'VALID',
                 'form-control': true,
-              }" />
+              }"
+            />
             <div *ngIf="addDeviceForm.controls.position.controls.h.errors" class="invalid-feedback"></div>
             <div *ngIf="addDeviceForm.controls.position.controls.h.errors?.required">H is required</div>
             <div *ngIf="addDeviceForm.controls.position.controls.h.errors?.minlength">
@@ -101,8 +105,9 @@
               'is-invalid': addDeviceForm.controls.modelId.status !== 'VALID',
               'is-valid': addDeviceForm.controls.modelId.status === 'VALID',
               'form-select': true,
-            }">
-            <option *ngFor="let modelObj of modelList; let i = index" value="{{ modelObj._id }}">
+            }"
+          >
+            <option *ngFor="let modelObj of modelList; let i = index" value="{{ modelObj.id }}">
               {{ modelObj.name }}
             </option>
           </select>
